assets/css/_footer.scss
/*
 * Newsletter Capture
 ***************************/
#newsletter-capture {
  margin-bottom: 72px;
  > div {
    border: 2px solid $toro_red;
    padding: 40px columns(1);
    @media screen and (max-width: $mobile_max) {
      padding: 56px 24px;
    }
  }
}

.newsletter-capture-title {
  @include h4-style;
  text-transform: uppercase;
  color: $toro_red;
  margin: 0;
  margin-bottom: 16px;
  font-family: $knockout-feather;
  @media screen and (max-width: $mobile_max) {
    margin-bottom: 40px;
    text-align: center;
    text-transform: uppercase;
  }
}

.newsletter-capture-form {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  label {
    flex: 1 0 0;
    margin-right: 44px;
  } button {
    flex: 0 0 auto;
  } @media screen and (max-width: $mobile_max) {
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    label, button {
      flex: initial;
      margin: 0;
    } label {
      width: 100%;
      margin-bottom: 40px;
    }
  }
  .form-fields__fields-wrapper{
    width: 100%;
    padding-right: 25px;
    @media (max-width: 767px){
      padding-right: 0px;
      margin-bottom: 20px;
    }
  }
}

.red-input {
  @extend %input;
  @include h3-style;

  background: $toro_red;
  color: $oro_yellow;
  font-family: $domaine;
  padding: 12px 24px;
  width: 100%;
  font-size:20px;
  @include placeholder {
    @include h3-style;

    color: $oro_yellow;
    font-family: $domaine;
    font-size:20px;
    @media screen and (max-width: 767px) {
      font-size:18px !important;

    }
  }
}

.outline-button {
  @extend %input;
  @include button-font-style;
  color: $toro_red;
  border: 2px solid;
  padding: 12px 64px;
  text-decoration: none;
  display: inline-block;
  transition: ease 250ms all;
  cursor: pointer;
  &:hover {
    background: $toro_red;
    color: white;
  } &:active {
    color: $oro_yellow;
    background: $toro_red;
  }
}

/*
 * Logo Carousel
 ***************************/
#logo-carousel {
  border-top: 2px solid $toro_red;
}

.partner-carousel {
  position: relative;
  .slick-arrow {
    @extend %input;
    height: 16px;
    width: 16px;
    // background: url('../img/carousel-arrow.svg');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center center;
    position: absolute;
    top: calc(50% - 8px);
    cursor: pointer;
    @media screen and (max-width: $mobile_max) {
      width: 16px;
      height: 16px;
    }
  } .slick-prev {
    left: -2%;
    border-left: 3px solid $toro_red;
    border-bottom: 3px solid $toro_red;
    transform: rotate(45deg);
    @media screen and (max-width: $mobile_max) {
      left: ($gutter_width_mobile * -1) + 8px;
    }
  } .slick-next {
    right: -2%;
    border-right: 3px solid $toro_red;
    border-bottom: 3px solid $toro_red;
    transform: rotate(-45deg);
    @media screen and (max-width: $mobile_max) {
      right: ($gutter_width_mobile * -1) + 8px;
    }
  }
}

.partner-slide {
  color: $toro_red;
  padding: columns(0,1);
  position: relative;
  a {
    display: block;
    width: 100%;
    height: 0;
    padding-bottom: 100%;
    position: relative;
  }
  img, svg {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    object-fit: contain;
  }
}

/*
 * Colophon
 ***************************/
#colophon {
  background: $toro_red;
  color: $white;
  padding: 64px 0 14px 0;
  > div {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: space-between;
    flex-wrap: wrap;
    @media screen and (max-width: $mobile_max) {
      flex-direction: column;
      align-items: stretch;
      justify-content: flex-start;
    }
  }
}

#footer-branding {

}

#colophon-logo {
  display: block;
  color: $oro_yellow;
  width: auto;
  height: auto;
   svg {
     height: 80px;
     path{
       fill: $oro_yellow;
     }
  } @media screen and (max-width: $mobile_max) {
    max-width: 250px;
    margin-bottom: 36px;
    svg {
      width: 100%;
      height: auto;
    }
  }
}

address.site-info {
  font-style: normal;
  @include nav-font-style;
  flex: 1 0 0;
  margin: 0 columns(0,1);
  letter-spacing: 0.03em !important;
  a {
    color: white;
    text-decoration: none;
    @include nav-font-style;
    &:hover {
      color: $oro_yellow;
    }
  }
  @media screen and (max-width: $mobile_max) {
    flex: initial;
    margin: 0;
    line-height: 3.6rem;
    margin-bottom: 36px;

  }
}

#footer-navigation {
  flex: 0 0 columns(3,1);
  ul {

    li {
      a {
        @include nav-font-style;
        text-decoration: none;
        color: white;
        letter-spacing: 0.03em !important;
        transition: ease 250ms all;
        &:hover {
          color: $oro_yellow;
        }
      } &:nth-of-type( 2n -1 ) {
        width: columns(2,1);
        float: left;
      } &:nth-of-type( 2n ) {
        width: columns(1);
        float: right;
      }
    }
  }
  @media screen and (max-width: $mobile_max) {
    flex: initial;
    line-height: 3.6rem;
    .footer-menu{
      display: flex;
      flex-direction: column;
      flex-wrap: wrap;
      align-items: space-between;
      max-height: 150px;
      overflow: hidden;
    }
  }
}

#tramp-stamp {
  flex: 0 0 100%;
  @include h6-style;
  text-transform: uppercase;
  margin-top: 44px;
  color: white;
  a {
    color: inherit;
    text-decoration: underline;
    &:hover {
      color: $oro_yellow;
    }
  } @media screen and (max-width: $mobile_max) {
    flex: initial;
    margin-top: 24px;
    text-transform: uppercase;
  }
}

.newsletter-success-msg{
  display: none;
}

#newsletter-popup.success{
  border-top: 2px solid white;
  .newsletter-sign-up-form{
    display: none;
  }
  .newsletter-success-msg{
    display: block;
    h3{
      color: white;
      text-transform: uppercase;
      font-size: 50px;
      font-family: $knockout-bantam;
    }
  }
}

.footer-social-menu{
  margin-top: 10px;
  a{
        margin-right: 20px;
  }
  img{
    height: 20px;
    width: auto;

  }
}

.field{
  margin-bottom: 20px;
}

.fields-one-line{
  display: flex;
  justify-content: space-between;
  align-items: center;
  .field{
    width: 49%;
  }
  @media(max-width: 767px){
    flex-direction: column;
    .field{
      width: 100%;
    }
  }
}

.form-required{
  margin-bottom: 20px;
}
.emmaFormLabelBold, .emmaFormLabelSmall{
  display: none;
}

.form-button{
  display: flex;
  justify-content: center;
}

.select-fields{
  display: flex;
  .red-input{
    height: 100%;
  }
  select{
    cursor: pointer;
  }
  @media (max-width: 900px){
    .red-input{
      padding: 12px 15px;
    }
  }
  @media (max-width: 767px){
    .red-input{
      padding: 12px 24px;
    }
    display: flex;
    flex-wrap: wrap;
    span{
      width: 100%;
    }
    select{
      width: 50%;
    }
  }
}

.birthday-label{
  display: flex;
  justify-content: center;
  align-items: center;
  height: auto !important;
  // background-color: $toro_red;
  // padding: 10px;
  // color: $oro_yellow;

}

.emmaRequiredLabel{
  font-size: 15px;
}

.zip-birth{
  @media(max-width: 767px){
    flex-direction: column;
    .field{
      width: 100%;
    }
    .birthday-label{
      font-size: 20px;
      display: inline-block;
    }
    select{
      font-size: 20px;
    }
  }
}

